test/org/midica/testfiles/failing/define-unknown-id.midica
INCLUDE inc/instruments.midica

DEFINE UNKNOWN_ID something

crd test c/d/e

0  test  /4
